// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary passes through if non-error 1`] = `
<div
  className="hero-page "
>
  <div
    className="hero-page__icon"
  >
    <svg
      className="mdi-icon "
      fill="currentColor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M13,13H11V7H13M13,17H11V15H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
      />
    </svg>
  </div>
  <div
    className="hero-page__title"
  >
    Error
  </div>
  <div
    className="hero-page__subtitle"
  >
    <div
      className="container"
    >
      <p>
        Sourcegraph encountered an unexpected error. If reloading the page doesn't fix it, contact your site admin or Sourcegraph support.
      </p>
      <p>
        <code
          className="text-wrap"
        >
          x
        </code>
      </p>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary renders error page if error 1`] = `
<span>
  hello
</span>
`;

exports[`ErrorBoundary renders reload page if chunk error 1`] = `
<div
  className="hero-page "
>
  <div
    className="hero-page__icon"
  >
    <svg
      className="mdi-icon "
      fill="currentColor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M13,13H11V7H13M13,17H11V15H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
      />
    </svg>
  </div>
  <div
    className="hero-page__title"
  >
    Error
  </div>
  <div
    className="hero-page__subtitle"
  >
    <div
      className="container"
    >
      <p>
        Sourcegraph encountered an unexpected error. If reloading the page doesn't fix it, contact your site admin or Sourcegraph support.
      </p>
      <p>
        <code
          className="text-wrap"
        >
          Loading chunk 123 failed.
        </code>
      </p>
    </div>
  </div>
</div>
`;
